# meld7t-infra

./: .gitignore  Brewfile  README.md  justfile  mount.sh
.github/workflows/: developer-release.yml
ansible/: bootstrap.yml  production.yml
containers/config/: services.env.example
containers/map/: segment.m
containers/pkg/: Containerfile  clean_uni.py  hippunfold_summarize.py  map_morphometry.py  package_derived_dicom.py  package_dicom.py  recon_prepare.py  series_classify.py  verify_cache.py
containers/systemd/: api-immudb-state.volume  api.container  caddy-data.volume  caddy.container  hippunfold-cache.volume  (+21 more)
platform/api/: Containerfile  alembic.ini  entrypoint.sh  pyproject.toml
platform/api/alembic/: env.py
platform/api/alembic/versions/: 1c9de23cb9af_add_case_dicom_path.py  4b7e2c9a1d53_routine_case_uploads.py  7f4d8c2a1b90_hardening_harmonization_outbox.py  9d2f6a8c4e71_combined_case_reports.py  a3e7c1d9b5f2_harmonization_cohort_builder.py  ac9817973224_add_result_study_uid.py  b8e1a4d9c3f2_run_claim_leases.py  bf48eccdf228_initial.py  c4f2a7e1d9b3_case_assignment.py  d6a3b8f2e4c1_active_series.py  e8b4c1d7f2a6_one_active_harmonization_profile.py  f9c5d2e8a3b7_audit_tx_bigint.py
platform/api/app/: audit.py  auth.py  case_upload_routes.py  cohort_builder.py  cohort_routes.py  config.py  db.py  detectors.py  dicom_policy.py  harmonization.py  harmonization_routes.py  main.py  models.py  orthanc.py  profile_import.py  queue.py  recipe.py  reporting.py  routes.py  storage.py  upload_receipt.py  version.py  workflow.py
platform/api/tests/: conftest.py  test_auth_audit.py  test_branding.py  test_case_uploads.py  test_harmonization.py  test_harmonization_builder.py  test_harmonization_cohort.py  test_reporting.py  test_version.py  test_worker_heartbeat.py  test_workflow.py
platform/worker/: meld7t-worker.service  pyproject.toml  run-dev.sh
platform/worker/tests/: test_e2e_local.py  test_harmonization_builder.py  test_report_pdf.py  test_report_tasks.py  test_worker_contracts.py
platform/worker/worker/: case_ingest.py  config.py  dicom.py  gpu.py  harmonization.py  harmonization_builder.py  ingest.py  pipeline.py  process.py  report_pdf.py  report_tasks.py  tasks.py
platform/worker/worker/detectors/: README.md  __init__.py  base.py  hippunfold.py  map.py  meld.py
shell/: modern-cli.sh
(+99 files in other folders)
