[project]
name = "meld7t-api"
version = "0.1.0"
description = "MELD 7T platform API — orchestration, recipe builder, results (spec §5)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlmodel==0.0.22",
    "psycopg[binary]==3.2.3",
    "alembic==1.14.0",
    "arq==0.26.3",
    "redis==5.2.1",
    "dicomweb-client==0.59.3",
    "immudb-py==1.4.0",
    "pydantic-settings==2.7.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-asyncio==0.25.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
