[project]
name = "meld7t-api"
version = "0.2.0"
description = "MELD 7T platform API — orchestration, recipe builder, results (spec §5)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.34.0",
    "sqlmodel==0.0.22",
    "psycopg[binary]==3.2.3",
    "alembic==1.14.0",
    "arq==0.26.3",
    "redis==5.2.1",
    "dicomweb-client==0.59.3",
    "pydicom==3.0.2",
    "requests==2.34.2",
    "immudb-py==1.5.0",
    "pydantic-settings==2.7.1",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "pytest-asyncio==1.4.0", "httpx2==2.5.0"]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
