[project]
name = "meld7t-worker"
version = "0.1.0"
description = "MELD 7T platform worker — Arq queue consumer, GPU-serialized (spec §2.3, §18)"
requires-python = ">=3.11"
dependencies = [
    "arq==0.26.3",
    "redis==5.2.1",
    "sqlmodel==0.0.22",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.1",
    "dicomweb-client==0.59.3",
    "requests==2.34.2",
    "immudb-py==1.5.0",
    # `app` package (models/db/config/detectors/audit) is provided on PYTHONPATH from ../api
]

[project.optional-dependencies]
dev = ["pytest==9.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
